# MTM_HW3

./: Auxilaries.h  CMakeLists.txt  Complex.cpp  Complex.h  MtmExceptions.h  MtmMat.h  MtmMatSq.h  MtmMatTriag.h  MtmVec.h  README.md
HW3tests/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
